fixed card info bar spacing and content display

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -99,7 +99,7 @@
       padding-right: 8px;
     }
     .star-icon {
-      padding: 8px;
+      padding-right: 5px;
     }
     .content {
       overflow-wrap: break-word;
